# hibana-pico

./: .gitignore  Cargo.toml  README.md  baker.md  memo.md  plan.md  plan_epf.md  plan_shin.md  plan_wasi.md
.cargo/: config.toml
apps/wasip1/wasip1-smoke-apps/: Cargo.toml
examples/baker-firmware/: Cargo.toml
examples/baker-firmware/src/: lib.rs  main.rs
examples/baker-firmware/wasip1/guest/: Cargo.toml
examples/baker-firmware/wasip1/guest/src/: lib.rs
examples/baker-firmware/wasip1/traffic/: Cargo.toml
examples/heterogeneous-split-example/: Cargo.toml
examples/heterogeneous-split-example/src/: lib.rs
examples/host-smoke-example/: Cargo.toml
examples/host-smoke-example/src/: main.rs
examples/pico-nod/: Cargo.toml  plan.md
examples/pico-nod/apple/PicoNodApp/: Package.swift  README.md
examples/pico-nod/apple/PicoNodApp/PicoNodApp.xcodeproj/: project.pbxproj
examples/pico-nod/apple/PicoNodApp/PicoNodApp.xcodeproj/xcshareddata/xcschemes/: PicoNodApp.xcscheme
examples/pico-nod/apple/PicoNodApp/Sources/PicoNodApp/: LaunchScreen.storyboard  PicoNodApp.swift
examples/pico-nod/apple/PicoNodApp/Sources/PicoNodApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
examples/pico-nod/apple/PicoNodApp/Sources/PicoNodAppCore/: PicoNodAppCore.swift
examples/pico-nod/apple/PicoNodApp/Tests/PicoNodAppCoreTests/: PicoNodAppCoreTests.swift
examples/pico-nod/deploy/: env.example
examples/pico-nod/deploy/launchd/: com.hibana.pico-nod.plist
examples/pico-nod/release/: app-store-review.md  operations-runbook.md  privacy-labels.md
examples/pico-nod/src/: acceptor.rs  apns.rs  approval.rs  audit.rs  billing.rs  commit.rs  ingress.rs  lib.rs  local_app.rs  protocol.rs  release.rs  support.rs
examples/pico-nod/tests/: security.rs
examples/rp2w-firmware/: Cargo.toml  README.md
examples/rp2w-firmware/linker/: rp2350.ld
examples/rp2w-firmware/scripts/: build_sensor_panel.sh
examples/rp2w-firmware/src/: lib.rs
examples/rp2w-firmware/wasip1/guest/: Cargo.toml
examples/rpw2-firmware/: Cargo.toml  README.md
examples/rpw2-firmware/linker/: rp2350.ld
examples/rpw2-firmware/scripts/: build_sensor_panel.sh
examples/rpw2-firmware/src/: lib.rs
examples/rpw2-firmware/wasip1/guest/: Cargo.toml
examples/rpw2-firmware/wasip1/guest/src/: lib.rs
examples/swarm-smoke-example/: Cargo.toml
examples/swarm-smoke-example/src/: main.rs
examples/uno-q-heterogeneous/: Cargo.toml  plan.md
examples/uno-q-heterogeneous/linker/: stm32u585-native.ld
examples/uno-q-heterogeneous/scripts/: build_m33_native.sh  check_wasip1_guest_builds.sh  dump_m33_markers.sh  flash_m33_native.sh  inject_llm_prompt.sh  install_llama_cpp_local_llm.sh
examples/uno-q-heterogeneous/src/: lib.rs  protocol.rs
examples/uno-q-heterogeneous/wasip1/guest/: Cargo.toml
examples/uno-q-heterogeneous/wasip1/guest/.cargo/: config.toml
examples/wasip1-guests/hibana-wasi-guest/: Cargo.toml
examples/wasip1-guests/swarm-node-apps/: Cargo.toml
examples/wasip1-guests/wasip1-smoke-apps/: Cargo.toml
examples/xbot/: Cargo.toml  plan.md
examples/xbot/src/: approval_boundary.rs  audit.rs  driver.rs  lib.rs  llm_boundary.rs  protocol.rs  wasi_agent.rs  x_boundary.rs
examples/xbot/tests/: xbot_attacks.rs
examples/xbot/tests/attacks/: 01_prompt_injection_reply.md  02_tool_call_injection.md  03_hidden_instruction.md  04_stale_approval_replay.md  05_wrong_generation.md  06_body_changed_after_approval.md  07_route_witness_forged.md  08_approval_hash_only.md  09_direct_post_attempt.md  10_token_exfiltration.md  11_unapproved_reply.md  12_choreofs_object_exists_without_approval.md  13_policy_reject.md  14_fence_safe_stop.md  15_xboundary_receives_zero_post.md  16_network_success_ack_lost_retry.md  17_duplicate_tx_id_different_body.md  18_audit_token_redaction.md  19_direct_x_client_dependency_gate.md  20_codex_app_server_untrusted_output.md
examples/xbot/wasip1/guest/: Cargo.toml
firmware/cyw43/: README.md
guest/hibana-wasip1-guest/: Cargo.toml
guest/hibana-wasip1-guest/src/: choreofs.rs  error.rs  lib.rs  sys.rs
guest/wasip1-clock/src/: main.rs
guest/wasip1-programs/: Cargo.toml
guest/wasip1-stdin/src/: main.rs
linker/rp2040/: pico_demo.ld
linker/rp2350/: pico2w_demo.ld
scripts/: archive_pico_nod_app.sh  check_baker_section_budgets.sh  check_pico_demo_budget.sh  check_pico_nod_app.sh  check_pico_nod_release_readiness.sh  check_plan_pico_gates.sh  check_wasip1_guest_builds.sh  run_baker_link_hardware_pattern.sh  run_choreofs_demo.sh  run_pico2w_swarm_qemu.sh
src/: appkit.rs  lib.rs  site.rs
src/appkit/: internal.rs  mod.rs
src/choreography/: fragment.rs  local.rs  mod.rs  swarm.rs
src/choreography/protocol/: control.rs  device.rs  fragments.rs  labels.rs  management.rs  mod.rs  network.rs  remote.rs  route.rs  swarm.rs  wasi.rs
src/kernel/: choreofs.rs  fd_object.rs  features.rs  guest_ledger.rs  metrics.rs  mod.rs  network.rs  resolver.rs  state.rs  transaction.rs
src/kernel/device/: timer.rs
src/kernel/mgmt/: grant.rs  lifecycle.rs  mod.rs
src/kernel/network/: mod.rs
src/kernel/remote/: mod.rs
src/kernel/swarm/: mod.rs
src/kernel/wasi/: host_runner.rs  mod.rs
src/machine/: mod.rs
src/machine/rp2040/: baker_link.rs  bringup.rs  gpio.rs  mod.rs  sio.rs  timer.rs  uart.rs
src/machine/rp2350/: bringup.rs  cyw43439.rs  mod.rs  sio.rs  uart.rs
src/port/: exec.rs  host_queue.rs  mod.rs  transport.rs
src/projects/: mod.rs
src/projects/baker_link_led/: choreography.rs  device_session.rs  engine_session.rs  guest.rs  hardware.rs  kernel_session.rs  ledger.rs  main.rs  manifest.rs  mod.rs  resolver.rs  runtime.rs  stages.rs  status.rs  storage.rs
src/projects/pico2w_swarm/: coordinator.rs  (+8 more)
src/proof/: baker_link.rs  mod.rs
tests/: host_app_policy.rs  host_architecture_boundaries.rs  host_baker_led_fd.rs  host_capsule_api.rs  host_choreofs.rs  host_feature_profiles.rs  host_kernel_control_boundaries.rs  host_management_hotswap.rs  host_measurement_gates.rs  host_sio_ping_pong.rs  host_swarm_plan.rs  host_wasip1_artifacts.rs  host_wasip1_syscalls.rs
(+22 files in other folders)
