[package]
name = "hibana-pico"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = [
    ".",
    "examples/host-smoke-example",
    "examples/baker-firmware",
    "examples/swarm-smoke-example",
    "examples/heterogeneous-split-example",
]
exclude = [
    "examples/baker-firmware/wasip1/traffic",
    "examples/wasip1-guests/hibana-wasi-guest",
    "examples/wasip1-guests/swarm-node-apps",
    "examples/wasip1-guests/wasip1-smoke-apps",
]
resolver = "3"

[dependencies]
hibana = { version = "0.4.0", default-features = false }

[features]
default = []

# Wasm engine implementation capacity. WASI P1 syscalls are selected by
# wasip1-sys-*.
wasm-engine-core = []

# WASI P1 syscall handler implementation capacity.
wasip1-sys-args-env = []
wasip1-sys-fd-write = []
wasip1-sys-fd-read = []
wasip1-sys-fd-readdir = []
wasip1-sys-fd-fdstat-get = []
wasip1-sys-fd-close = []
wasip1-sys-clock-res-get = []
wasip1-sys-clock-time-get = []
wasip1-sys-poll-oneoff = []
wasip1-sys-random-get = []
wasip1-sys-proc-exit = []
wasip1-sys-path-open = []
