[package]
name = "hibana-pico"
version = "0.1.0"
edition = "2024"
publish = false
exclude = ["/plan.md", "/examples/**/plan.md"]

[workspace]
members = [
    ".",
    "examples/baker-firmware",
    "examples/heterogeneous-split-example",
    "examples/rp2w-firmware",
    "examples/uno-q-heterogeneous",
]
exclude = [
    "examples/baker-firmware/wasip1/guest",
    "examples/rp2w-firmware/wasip1/guest",
    "examples/uno-q-heterogeneous/wasip1/guest",
    "guest/hibana-wasip1-guest",
    "guest/wasip1-programs",
]
resolver = "3"

[dependencies]
hibana = { version = "0.9.0", default-features = false }
hibana-wasip1-runtime = { path = "../hibana-wasip1-runtime", default-features = false }

[patch.crates-io]
hibana = { path = "../hibana" }

[features]
default = []

# Enables the appkit path that embeds and drives a WASI P1 guest.
wasm-engine-core = []
