[package]
name = "baker-firmware"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hibana = { version = "0.8.0", default-features = false }
hibana-pico = { path = "../.." }

[features]
default = []
wasm-engine-core = ["hibana-pico/wasm-engine-core"]
wasip1-sys-args-env = ["hibana-pico/wasip1-sys-args-env"]
wasip1-sys-fd-write = ["hibana-pico/wasip1-sys-fd-write"]
wasip1-sys-path-open = ["hibana-pico/wasip1-sys-path-open"]
wasip1-sys-poll-oneoff = ["hibana-pico/wasip1-sys-poll-oneoff"]
wasip1-sys-proc-exit = ["hibana-pico/wasip1-sys-proc-exit"]
embed-wasip1-artifacts = []

[[bin]]
name = "baker-traffic"
path = "src/bin/traffic.rs"

[[bin]]
name = "baker-choreofs-traffic"
path = "src/bin/choreofs_traffic.rs"

[[bin]]
name = "baker-choreofs-traffic-loop"
path = "src/bin/choreofs_traffic_loop.rs"

[[bin]]
name = "baker-fail-safe"
path = "src/bin/fail_safe.rs"

[[bin]]
name = "baker-recovery"
path = "src/bin/recovery.rs"

[[bin]]
name = "baker-many-reentry"
path = "src/bin/many_reentry.rs"

[[bin]]
name = "baker-panic-marker"
path = "src/bin/panic_marker.rs"

[[bin]]
name = "baker-endpoint-fault"
path = "src/bin/endpoint_fault.rs"

[[bin]]
name = "baker-endpoint-poison"
path = "src/bin/endpoint_poison.rs"

[[bin]]
name = "baker-preview-probe"
path = "src/bin/preview_probe.rs"

[[bin]]
name = "baker-deadline-fault"
path = "src/bin/deadline_fault.rs"

[[bin]]
name = "baker-timer-route"
path = "src/bin/timer_route.rs"
