[package]
name = "baker-firmware"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hibana = { version = "0.9.0", default-features = false }
hibana-epf = { path = "../../../hibana-epf", default-features = false }
hibana-pico = { path = "../.." }
hibana-wasip1-runtime = { path = "../../../hibana-wasip1-runtime", default-features = false }

[features]
default = []
wasm-engine-core = ["hibana-pico/wasm-engine-core"]
embed-wasip1-artifacts = []

[[bin]]
name = "baker-traffic"
path = "src/bin/traffic.rs"

[[bin]]
name = "baker-choreofs-traffic"
path = "src/bin/choreofs_traffic.rs"

[[bin]]
name = "baker-choreofs-traffic-loop"
path = "src/bin/choreofs_traffic_loop.rs"

[[bin]]
name = "baker-fail-safe"
path = "src/bin/fail_safe.rs"

[[bin]]
name = "baker-recovery"
path = "src/bin/recovery.rs"

[[bin]]
name = "baker-many-reentry"
path = "src/bin/many_reentry.rs"

[[bin]]
name = "baker-panic-marker"
path = "src/bin/panic_marker.rs"

[[bin]]
name = "baker-endpoint-fault"
path = "src/bin/endpoint_fault.rs"

[[bin]]
name = "baker-endpoint-poison"
path = "src/bin/endpoint_poison.rs"

[[bin]]
name = "baker-preview-probe"
path = "src/bin/preview_probe.rs"

[[bin]]
name = "baker-deadline-fault"
path = "src/bin/deadline_fault.rs"

[[bin]]
name = "baker-timer-route"
path = "src/bin/timer_route.rs"

[[bin]]
name = "baker-session-mismatch"
path = "src/bin/session_mismatch.rs"

[[bin]]
name = "baker-capacity-fault"
path = "src/bin/capacity_fault.rs"

[[bin]]
name = "baker-epf-policy-timer"
path = "src/bin/epf_policy_timer.rs"
