[package]
name = "rp2w-firmware"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hibana = { version = "0.9.0", default-features = false }
hibana-epf = { path = "../../../hibana-epf", default-features = false }
hibana-pico = { path = "../.." }
hibana-wifi = { path = "../../../hibana-wifi", default-features = false, optional = true }
hibana-wasip1-runtime = { path = "../../../hibana-wasip1-runtime", default-features = false }
uno-q-heterogeneous = { path = "../uno-q-heterogeneous", default-features = false, optional = true }

[features]
default = []
wasm-engine-core = ["hibana-pico/wasm-engine-core"]
embed-wasip1-artifacts = []
embed-cyw43-artifacts = ["sensor-panel"]
sensor-panel = ["dep:hibana-wifi", "dep:uno-q-heterogeneous"]

[[bin]]
name = "rp2w-epf-policy-timer"
path = "src/bin/epf_policy_timer.rs"

[[bin]]
name = "rp2w-sensor-panel"
path = "src/bin/sensor_panel.rs"
required-features = ["sensor-panel"]
