[package]
name = "uno-q-heterogeneous"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hibana = { version = "0.9.0", default-features = false }
hibana-pico = { path = "../.." }
hibana-wifi = { path = "../../../hibana-wifi", default-features = false }
hibana-wasip1-runtime = { path = "../../../hibana-wasip1-runtime", default-features = false }
libc = "0.2"

[features]
default = []
runtime-wasip1 = [
    "hibana-pico/wasm-engine-core",
]
embed-wasip1-artifacts = []

[[bin]]
name = "host-loopback-proof"
path = "src/bin/host_loopback_proof.rs"

[[bin]]
name = "uno-q-hardware-proof"
path = "src/bin/uno_q_hardware_proof.rs"

[[bin]]
name = "uno-q-sensor-face-demo"
path = "src/bin/uno_q_sensor_face_demo.rs"

[[bin]]
name = "uno-q-m33-native-kernel"
path = "src/bin/uno_q_m33_native_kernel.rs"
