[package]
name = "hibana-pico-swarm-node-apps"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[[bin]]
name = "swarm-coordinator"
path = "src/bin/swarm-coordinator.rs"

[[bin]]
name = "swarm-sensor"
path = "src/bin/swarm-sensor.rs"

[[bin]]
name = "swarm-actuator"
path = "src/bin/swarm-actuator.rs"

[[bin]]
name = "swarm-gateway"
path = "src/bin/swarm-gateway.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
