[package]
name = "hibana-pico-wasip1-smoke-apps"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
hibana-wasi-guest = { path = "../hibana-wasi-guest" }

[[bin]]
name = "wasip1-stdout"
path = "../wasip1-stdout/src/main.rs"

[[bin]]
name = "wasip1-stderr"
path = "../wasip1-stderr/src/main.rs"

[[bin]]
name = "wasip1-stdin"
path = "../wasip1-stdin/src/main.rs"

[[bin]]
name = "wasip1-clock"
path = "../wasip1-clock/src/main.rs"

[[bin]]
name = "wasip1-random"
path = "../wasip1-random/src/main.rs"

[[bin]]
name = "wasip1-exit"
path = "../wasip1-exit/src/main.rs"

[[bin]]
name = "wasip1-timer"
path = "src/bin/wasip1-timer.rs"

[[bin]]
name = "wasip1-trap"
path = "src/bin/wasip1-trap.rs"

[[bin]]
name = "wasip1-infinite-loop"
path = "src/bin/wasip1-infinite-loop.rs"

[[bin]]
name = "wasip1-led-fd-write"
path = "src/bin/wasip1-led-fd-write.rs"

[[bin]]
name = "wasip1-led-blink"
path = "src/bin/wasip1-led-blink.rs"

[[bin]]
name = "wasip1-led-chaser"
path = "src/bin/wasip1-led-chaser.rs"

[[bin]]
name = "wasip1-led-bad-order"
path = "src/bin/wasip1-led-bad-order.rs"

[[bin]]
name = "wasip1-led-invalid-fd"
path = "src/bin/wasip1-led-invalid-fd.rs"

[[bin]]
name = "wasip1-led-bad-payload"
path = "src/bin/wasip1-led-bad-payload.rs"

[[bin]]
name = "wasip1-led-ordinary-std-chaser"
path = "src/bin/wasip1-led-ordinary-std-chaser.rs"

[[bin]]
name = "wasip1-led-choreofs-open"
path = "src/bin/wasip1-led-choreofs-open.rs"

[[bin]]
name = "wasip1-led-choreofs-bad-path"
path = "src/bin/wasip1-led-choreofs-bad-path.rs"

[[bin]]
name = "wasip1-led-choreofs-bad-payload"
path = "src/bin/wasip1-led-choreofs-bad-payload.rs"

[[bin]]
name = "wasip1-led-choreofs-wrong-object"
path = "src/bin/wasip1-led-choreofs-wrong-object.rs"

[[bin]]
name = "wasip1-std-core-coverage"
path = "src/bin/wasip1-std-core-coverage.rs"

[[bin]]
name = "wasip1-std-choreofs-read"
path = "src/bin/wasip1-std-choreofs-read.rs"

[[bin]]
name = "wasip1-std-choreofs-append"
path = "src/bin/wasip1-std-choreofs-append.rs"

[[bin]]
name = "wasip1-std-bad-path"
path = "src/bin/wasip1-std-bad-path.rs"

[[bin]]
name = "wasip1-std-choreofs-static-write"
path = "src/bin/wasip1-std-choreofs-static-write.rs"

[[bin]]
name = "wasip1-std-sock-send-recv"
path = "src/bin/wasip1-std-sock-send-recv.rs"

[[bin]]
name = "wasip1-std-sock-accept-send-recv"
path = "src/bin/wasip1-std-sock-accept-send-recv.rs"

[[bin]]
name = "wasip1-std-sock-accept-bad"
path = "src/bin/wasip1-std-sock-accept-bad.rs"

[[bin]]
name = "wasip1-std-stream-control"
path = "src/bin/wasip1-std-stream-control.rs"

[[bin]]
name = "wasip1-memory-grow-ok"
path = "src/bin/wasip1-memory-grow-ok.rs"

[[bin]]
name = "wasip1-memory-grow-stale-lease"
path = "src/bin/wasip1-memory-grow-stale-lease.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
