[package]
name = "baker-wasip1-guest"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
hibana-wasip1-guest = { path = "../../../../guest/hibana-wasip1-guest" }

[[bin]]
name = "wasip1-led-choreofs-traffic-cycle"
path = "src/bin/wasip1-led-choreofs-traffic-cycle.rs"

[[bin]]
name = "wasip1-led-choreofs-traffic-once"
path = "src/bin/wasip1-led-choreofs-traffic-once.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
