[package]
name = "baker-wasip1-guest"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[[bin]]
name = "wasip1-led-choreofs-traffic-cycle"
path = "src/bin/wasip1-led-choreofs-traffic-cycle.rs"

[[bin]]
name = "wasip1-led-choreofs-traffic-once"
path = "src/bin/wasip1-led-choreofs-traffic-once.rs"

[[bin]]
name = "wasip1-session-mismatch-fd-write"
path = "src/bin/wasip1-session-mismatch-fd-write.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
