[package]
name = "uno-q-heterogeneous-wasip1-guest"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
hibana-wasip1-guest = { path = "../../../../guest/hibana-wasip1-guest" }

[[bin]]
name = "uno-q-llm-face-cell"
path = "src/bin/uno-q-llm-face-cell.rs"

[[bin]]
name = "uno-q-llm-face-router"
path = "src/bin/uno-q-llm-face-router.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
