[package]
name = "uno-q-heterogeneous-wasip1-guest"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[[bin]]
name = "uno-q-llm-face-shell"
path = "src/bin/uno-q-llm-face-shell.rs"

[[bin]]
name = "uno-q-llm-face-shell-loop"
path = "src/bin/uno-q-llm-face-shell-loop.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
