[package]
name = "xbot-wasip1-guest"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
hibana-wasip1-guest = { path = "../../../../guest/hibana-wasip1-guest" }

[[bin]]
name = "wasip1-xbot-reply-normalizer"
path = "src/bin/wasip1-xbot-reply-normalizer.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
